<resources>
    <string name="app_name">Sabbath School Discuss</string>
    <string name="app_f_name">Sabbath_School_Discuss</string>
    <string name="m_email">pacxman305@gmail.com</string>
    <string name="instr">Create username</string>
    <string name="app_name_2">Sabbath School Discussions</string>
    <string name="exp_mg">We are waiting for server response message, make sure you have a working internet connection, you can contact us in email at pacxman305@gmail.com</string>
    <string name="no_net">Your data connection is turned off, turn on data connection to get newer lessons.\nUnless you will not get newer lessons.</string>
    <string name="net_error">NO INTERNET CONNECTION\n\nYour device is not connected to internet. You will start using this app, when we had successfully configured your device.\n\nPlease turn on your data connection and restart this app.</string>
    <string name="download_instr">Sabbath School Discuss want to download Bible plugin file, this file help you to read all Bible verses given.\n\nIf you want to do it later, you will go in menu and choose \"Bible plugin\" option to install it.\n\nDo you want to download it now?</string>
    <string name="update_plugin_msg">This plugin is already installed, but you can download it to install latest plugin.\n\nThis will also remove the previous installed plugin\n\nDo you want to download this plugin file?</string>
    <string name="c_font_msg">Click on menu button choose Settings and click Font size to set your favorite font size</string>
    <string name="night_mode_msg">You can read text in night mode, just click menu button choose Settings and click on Night mode</string>
    <string name="notify_msg">You can set your favorite daily study notification time in Settings.</string>
    <string name="setts">Settings</string>
    <string name="sabbath_school">Sabbath School Quarterlies and its based materials are the properties of the Seventh Day Adventist church organization, we share current lesson for social discussions and review purpose.</string>
    <string name="story_desc">Inside story, is a part of Sabbath School which tells some stories or testimonies.\n\nSabbath School Discuss may post some stories or testimonies which is not part of current Inside story.</string>
    <string name="no_name_msg">For sharing your comment or question you must have a username, but actually you do not have it.</string>
    <string name="appId">ca-app-pub-8062117079784537~1692356123</string>
    <string name="interUnit">ca-app-pub-8062117079784537/6905810898</string>
    <string name="bannerUnit">ca-app-pub-8062117079784537/1601513328</string>
    <string name="rewardAd">ca-app-pub-8062117079784537/9870649187</string>
    <string name="v_code">B.Y</string>
    <string name="full_b_version">Bibiliya Yera</string>
    <string name="pm_txt">Sabbath School and Personal ministry\n\nPersonal Ministries is a facet of the church whose origin can be traced to the beginning of Seventh-day Adventist® history in the 1860s. It endeavors to inspire, motivate, equip, train, and mobilize all members.</string>
    <string name="close_msg">Do really you want to close this application?</string>
    <string name="ext_mes_3">Do not forget to share your comment or question!\n\nDo you want quit?</string>
    <string name="login_hint_1">Use a phone number</string>
    <string name="no_email_hint">No email?</string>
    <string name="yes_hint">Yes</string>
    <string name="no_internet_hint">No active internet connection!</string>
    <string name="confirm_txt">Confirming username</string>
    <string name="web_view_error_msg">Failed to access website, no resources provided!\n\nClose this session and try again</string>
    <string name="read_top_hint"> have read this story</string>
    <string name="sub_title_hint">Sabbath School Discuss (Kinyarwanda)</string>
    <string name="about_quarter_title">About this Quarter</string>
    <string name="go_to_lesson">Go to lesson</string>
    <string name="bible_plugin">Bible plugin</string>
    <string name="share_app">Share app</string>
    <string name="this_quarter">This quarter</string>
    <string name="visit_website">Visit website</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="comments">Comments</string>
    <string name="dismiss">Dismiss</string>
    <string name="later">Later</string>
    <string name="visit">Visit</string>
    <string name="rater_msg">We share some posts on our facebook page, please like or visit our facebook page.\n\nClick on visit button below</string>
    <string name="storage_ask">We require access storage permission to be granted, we need it only to read or write app\'s data file on device storage, click button bellow and make sure you grant it to us.</string>
    <string name="choose_account_msg">Please select your account</string>
    <string name="request_storage">Please grant us storage permission</string>
    <string name="username_hint">Enter your username</string>
    <string name="email_hint">Email or phone number</string>
    <string name="let_s_start">Let\'s get started</string>
    <string name="m_first_reward">We use ads to help this project</string>
    <string name="set_font_size">Set font size</string>
    <string name="font_size">Font size</string>
    <string name="font">Font</string>
    <string name="size_display">Set text size for displays</string>
    <string name="text_size">Text size</string>
    <string name="notification">Notification</string>
    <string name="receive_daily">Receive daily read notification</string>
    <string name="remind_me">Remind me to read</string>
    <string name="set_notification">Set daily read notification</string>
    <string name="choose_hour">Choose hour</string>
    <string name="show_alert">Show pending alert message</string>
    <string name="start_alert">Pending alerts</string>
    <string name="read_mode">Read Mode</string>
    <string name="use_night_mode">Set to use in night mode</string>
    <string name="night_mode">Night Mode</string>
    <string name="use_default_font">Set to use default font</string>
    <string name="default_font">Default font</string>
    <string name="references">References</string>
    <string name="underline_inline">Underline inline references</string>
    <string name="underline_references">Underline references</string>
    <string name="choose_highlight">Choose reference highlight color</string>
    <string name="reference_color">Reference color</string>
    <string name="inside_story">Inside stories</string>
    <string name="push_prefix"> posted in comments</string>
    <string name="fail_hint">Unable to download file</string>
    <string name="download_warn">Do not intercept this process</string>
    <string name="net_error_title">No active internet connection!</string>
    <string name="downloading">Downloading…</string>
    <string name="appearance">Appearance</string>
    <string name="mark_summary">Mark important paragraph</string>
    <string name="mark_title">Mark important</string>
    <string name="no_hash">This field can\'t contain #</string>
    <string name="ret_2">Do you want to close this application?</string>
    <string name="intro">Introduction</string>
    <string name="about_quarter">About this Quarter</string>
    <string name="no_intro_prefix">Currently no further information provided about this quarter.</string>
    <string name="name_exist_hint">This username already exist, please choose another</string>
    <string name="username">Username</string>
    <string name="change_username">Change username</string>
    <string name="new_name_hint">New username</string>
    <string name="no_account_msg">It\'s looks like you don\'t have a valid account, try reinstalling this app!</string>
    <string name="blank_name">User name can\'t be blank, contains only digits or white space or a dot</string>
    <string name="name_mismatch_hint">Old name does not match with current account, try reinstalling this app</string>
    <string name="no_net_title">No internet access</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="change_name_hint">Do you want to change your username?\n\nYour current username is</string>
    <string name="yes">Yes</string>
    <string name="change_name_completed">Succeed</string>
    <string name="name_exist_msg">The name you\'ve chosen already exist, try another one</string>
    <string name="sync_data">Synchronizing data…</string>
    <string name="same_name_msg">The username provided is the same as your current username.\n\nWe can\'t proceed to change username.</string>
    <string name="font_family_summary">Set custom font type to use</string>
    <string name="font_family_title">Choose font type</string>
    <string name="alarm_error"> encounter an error while trying to notify you</string>
    <string name="highlight_msg">Click and hold on your favorite text to highlight or share it</string>
    <string name="change_font">Changing font size</string>
    <string name="night_mode_title">Night mode</string>
    <string name="pm_title">Personal Ministry</string>
    <string name="about_ntf">About notification</string>
    <string name="purpose">Purpose</string>
    <string name="denied_msg">We\'re sorry to inform you that you are no longer allowed to use this application, for further explanation please send us your email at pacxman305@gmail.com</string>
    <string name="denied_title">Access denied</string>
    <string name="font_type">Font type</string>
    <string name="auto_scroll">Auto scroll</string>
    <string name="scroll_desc">Move lesson title at the top automatically</string>
    <string name="scroll_title">Auto scroll title</string>
    <string name="notif_miss_prefix">Study today\'s lesson</string>
    <string name="read_title">Read introduction</string>
    <string name="read_intro">Introduction about this quarter is currently available, and probably you didn\'t read it, please take a time and read it!</string>
    <string name="read">Read</string>
    <string name="quarter_of">Quarter </string>
    <string name="app_lang">Kinyarwanda</string>
    <string name="opened_references">Opened references</string>
    <string name="highlights">Highlights</string>
    <string name="notes">Notes</string>
    <string name="cancel">Cancel</string>
    <string name="continue_hint">Continue</string>
    <string name="write_verse">Write here…</string>
    <string name="empty_ref">Enter reference to open</string>
    <string name="unable_to_down">Unable to download file</string>
    <string name="read_reference">Read reference</string>
    <string name="hint_verses">You can retrieve all the verses you have read, go in \"Menu choose More and choose Opened references\".</string>
    <string name="save_reference">Save reference</string>
    <string name="save_ref_summary">Save all references you open automatically</string>
    <string name="save_historic">Historic</string>
    <string name="appearance_change">Appearance change</string>
    <string name="night_mode_hint">This change may affect reference appearance, you will have to change reference color if it is not clearly visible</string>
    <string name="read_comment">Read and comment</string>
    <string name="download">Download</string>
    <string name="not_now">Not now</string>
    <string name="new_version_msg">A new version of this app is available, click on download button to download it, data charges will be applied.</string>
    <string name="new_version">New version</string>
    <string name="other">Other</string>
    <string name="show_mission_summary">Show ongoing mission icon</string>
    <string name="show_mission_title">Show mission icon</string>
    <string name="videos">Videos</string>
    <string name="show_tabs_summary">Show weekly date tabs</string>
    <string name="show_tabs">Show tabs</string>
    <string name="layout">Layout</string>
</resources>