<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="7dp"
        android:background="@drawable/dlg_bg">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/upTxtArea"
            android:layout_marginBottom="6dp">

                <TextView
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:text="@string/hint_typed_ref"
                    android:padding="2dp"
                    android:textColor="#FFFFFF"/>

        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/upTxtArea"
            android:id="@+id/reference_input"
            android:hint="@string/write_verse"
            android:textColor="@color/black"
            android:textColorHint="@color/bkg_gray"
            android:background="@drawable/white_flat_rect"
            android:padding="6dp"
            android:minHeight="50dp"
            android:inputType="textPersonName|textNoSuggestions"
            android:layout_margin="2dp"/>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="38dp"
            android:layout_alignParentRight="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="8dp"
            android:layout_below="@id/reference_input">

            <Button
                android:id="@+id/close_dlg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/snd_bkg"
                android:text="@string/close"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/request_verse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/snd_bkg"
                android:text="@string/continue_hint"
                android:textColor="#FFFFFF" />

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>
