<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/rounded_box"
            android:focusableInTouchMode="true"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:paddingTop="4dp">

                <TextView
                    android:id="@+id/login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/let_s_start"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_area"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidth="2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_area"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:boxStrokeColor="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_hint"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/login_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/round_btn">

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        android:padding="10dp"
                        android:text="Continue"
                        android:textAllCaps="false"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/skip_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/later"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="16dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#00FFFF" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
